# GaussWorld-ManuscriptOS

./: .gitignore  README.md  pyproject.toml
docs/: agent-contracts.md  architecture.md  artifact-specs.md  auth.md  journal-packs.md  product-target.md
examples/theory_plus_experiment/00_intake/: idea.md
examples/theory_plus_experiment/expected_outputs/: README.md
examples/theory_plus_experiment/input_assets/: README.md
prompts/agents/: experiment.md  experiment_runner.md  literature.md  planner.md  proof_auditor.md  spec.md  theory_architect.md  writer.md
src/gw_mos/: __init__.py  __main__.py  agent_runtime.py  cli.py  config.py  nl.py  nl_types.py  orchestrator.py  prompt_loader.py  session.py  specification.py  tui.py
src/gw_mos/agents/: __init__.py  base.py  contracts.py
src/gw_mos/artifacts/: __init__.py  models.py  paths.py  readers.py  workspace.py  writers.py
src/gw_mos/controller/: decisions.py  engine.py  gates.py  stages.py  state_store.py
src/gw_mos/experiments/: __init__.py  audit.py  materialize.py  planner.py  provenance.py  runner_tmux.py  status.py
src/gw_mos/journals/: __init__.py  base.py  discovery.py  registry.py
src/gw_mos/literature/: __init__.py  ingest_bib.py  ingest_pdf.py  metadata.py  novelty.py  pipeline.py  search.py
src/gw_mos/providers/: anthropic_provider.py  base.py  openai_provider.py  planner.py  registry.py
src/gw_mos/qa/: __init__.py  citations.py  claims.py  compile.py  figures_tables.py  report.py
src/gw_mos/theory/: __init__.py  assumptions.py  audit.py  counterexamples.py  notation.py  pipeline.py  (+1 more)
(+12 files in other folders)
